// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar > should render 1`] = `
<DocumentFragment>
  <div
    class="shrink-0 css-jfogd3"
    data-testid="Avatar"
  >
    <div
      class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(76, 175, 80)" width="100" height="100"/><circle r="45" cx="30" cy="60" fill="rgb(255, 193, 7)"/><circle r="50" cx="50" cy="30" fill="rgb(244, 67, 54)"/><circle r="60" cx="80" cy="40" fill="rgb(0, 150, 136)"/></svg>"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > should render with custom shadow color 1`] = `
<DocumentFragment>
  <div
    class="ring-theme-black shrink-0 css-16qzgxm"
    data-testid="Avatar"
  >
    <div
      class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(76, 175, 80)" width="100" height="100"/><circle r="45" cx="30" cy="60" fill="rgb(255, 193, 7)"/><circle r="50" cx="50" cy="30" fill="rgb(244, 67, 54)"/><circle r="60" cx="80" cy="40" fill="rgb(0, 150, 136)"/></svg>"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > should render with highlight 1`] = `
<DocumentFragment>
  <div
    class="shrink-0 css-jfogd3"
    data-testid="Avatar"
  >
    <div
      class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle ring-2 ring-theme-primary-600"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(76, 175, 80)" width="100" height="100"/><circle r="45" cx="30" cy="60" fill="rgb(255, 193, 7)"/><circle r="50" cx="50" cy="30" fill="rgb(244, 67, 54)"/><circle r="60" cx="80" cy="40" fill="rgb(0, 150, 136)"/></svg>"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > should render with highlight and custom shadow color 1`] = `
<DocumentFragment>
  <div
    class="ring-theme-black shrink-0 css-16qzgxm"
    data-testid="Avatar"
  >
    <div
      class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle ring-2 ring-theme-primary-600"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(76, 175, 80)" width="100" height="100"/><circle r="45" cx="30" cy="60" fill="rgb(255, 193, 7)"/><circle r="50" cx="50" cy="30" fill="rgb(244, 67, 54)"/><circle r="60" cx="80" cy="40" fill="rgb(0, 150, 136)"/></svg>"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > should render with size 1`] = `
<DocumentFragment>
  <div
    class="shrink-0 css-1yk316i"
    data-testid="Avatar"
  >
    <div
      class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(76, 175, 80)" width="100" height="100"/><circle r="45" cx="30" cy="60" fill="rgb(255, 193, 7)"/><circle r="50" cx="50" cy="30" fill="rgb(244, 67, 54)"/><circle r="60" cx="80" cy="40" fill="rgb(0, 150, 136)"/></svg>"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > should render with size 2`] = `
<DocumentFragment>
  <div
    class="shrink-0 css-h8w6w0"
    data-testid="Avatar"
  >
    <div
      class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(76, 175, 80)" width="100" height="100"/><circle r="45" cx="30" cy="60" fill="rgb(255, 193, 7)"/><circle r="50" cx="50" cy="30" fill="rgb(244, 67, 54)"/><circle r="60" cx="80" cy="40" fill="rgb(0, 150, 136)"/></svg>"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > should render with size 3`] = `
<DocumentFragment>
  <div
    class="shrink-0 css-1n9jllj"
    data-testid="Avatar"
  >
    <div
      class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(76, 175, 80)" width="100" height="100"/><circle r="45" cx="30" cy="60" fill="rgb(255, 193, 7)"/><circle r="50" cx="50" cy="30" fill="rgb(244, 67, 54)"/><circle r="60" cx="80" cy="40" fill="rgb(0, 150, 136)"/></svg>"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > should render with size 4`] = `
<DocumentFragment>
  <div
    class="shrink-0 css-e8csh4"
    data-testid="Avatar"
  >
    <div
      class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(76, 175, 80)" width="100" height="100"/><circle r="45" cx="30" cy="60" fill="rgb(255, 193, 7)"/><circle r="50" cx="50" cy="30" fill="rgb(244, 67, 54)"/><circle r="60" cx="80" cy="40" fill="rgb(0, 150, 136)"/></svg>"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > should render without shadow 1`] = `
<DocumentFragment>
  <div
    class="shrink-0 css-1px82g5"
    data-testid="Avatar"
  >
    <div
      class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(76, 175, 80)" width="100" height="100"/><circle r="45" cx="30" cy="60" fill="rgb(255, 193, 7)"/><circle r="50" cx="50" cy="30" fill="rgb(244, 67, 54)"/><circle r="60" cx="80" cy="40" fill="rgb(0, 150, 136)"/></svg>"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;
